Bug 326164 - The icon doesn't correctly show the vpn status
Summary: The icon doesn't correctly show the vpn status
Status: VERIFIED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Networks widget (other bugs)
Version First Reported In: master
Platform: unspecified Linux
: NOR normal
Target Milestone: 1.0
Assignee: Jan Grulich
URL:
Keywords:
: 326014 326304 326358 326401 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-10-17 20:31 UTC by Weng Xuetian
Modified: 2024-12-23 18:25 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.3.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Weng Xuetian 2013-10-17 20:31:05 UTC
I'm using wireless and openvpn, while it connects correctly, if vpn is connected, the tray icon is shown as wireless is disconnected.

Reproducible: Always

Steps to Reproduce:
1. connect wifi
2. connect openvpn
Actual Results:  
icon looks like http://i.imgur.com/4bab2xF.png

Expected Results:  
maybe it should have a lock overlay icon just like the old c++ applet.
Comment 1 Jan Grulich 2013-10-18 08:54:53 UTC
There is a lock overlay when you are connected to VPN, but in your case there is something wrong. Can you please enable plasma-nm in kdebugdialog (enable everything just for sure) and reproduce again your problem? Then send me here the content of .xsession-error.
Comment 2 Jan Grulich 2013-10-20 09:03:08 UTC
*** Bug 326304 has been marked as a duplicate of this bug. ***
Comment 3 Jan Grulich 2013-10-20 09:31:10 UTC
What distribution and version of NetworkManager do you use?
Comment 4 Fabien GOGLIO 2013-10-20 10:05:57 UTC
I use Kubuntu 13.10 so KDE 4.11.2 and the new plasma-nm.
Comment 5 Lasse Liehu 2013-10-20 13:00:27 UTC
I have the same problem with a VPN connection using PPTP. Distribution is Arch Linux with the following package versions:

networkmanager 0.9.8.8-1
networkmanager-pptp 0.9.8.4-1
libnm-qt 0.9.0.1-1
kdeplasma-applets-plasma-nm 0.9.3.1-2

Enabled all plasma-nm options in kdebugdialog, but didn't get anything in .xsession-errors (the file doesn't exist).
Comment 6 Jan Grulich 2013-10-20 17:16:55 UTC
*** Bug 326014 has been marked as a duplicate of this bug. ***
Comment 7 Jan Grulich 2013-10-20 17:55:32 UTC
Git commit 932a9b17b72a0eed6ff7f619c6603644de92b8da by Jan Grulich.
Committed on 20/10/2013 at 17:54.
Pushed by grulich into branch 'master'.

Fix the icon when you are connected to VPN

M  +17   -7    declarative-plugins/applet/connectionicon.cpp

http://commits.kde.org/plasma-nm/932a9b17b72a0eed6ff7f619c6603644de92b8da
Comment 8 Jan Grulich 2013-10-20 17:58:00 UTC
Can someone please test the fix above? Thanks
Comment 9 Jan Grulich 2013-10-21 07:46:34 UTC
*** Bug 326358 has been marked as a duplicate of this bug. ***
Comment 10 Lukáš Tinkl 2013-10-21 10:55:26 UTC
Works fine for me after the fix
Comment 11 Jan Grulich 2013-10-22 07:09:30 UTC
*** Bug 326403 has been marked as a duplicate of this bug. ***
Comment 12 Jan Grulich 2013-10-22 07:09:36 UTC
*** Bug 326401 has been marked as a duplicate of this bug. ***
Comment 13 Fabien GOGLIO 2013-10-22 08:30:13 UTC
The fix solves the bug for me.
Comment 14 Ben Cooksley 2024-12-23 18:25:48 UTC
Bulk transfer as requested in T17796