Fix the icon when you are connected to VPN

BUG:326164